# access-web-with-voice

./: .gitignore  Hybrid_Voice_Browser_Agent_v1_Workflow.md  PROGRESS.md  README.md
extension/: build.mjs  manifest.json  package-lock.json  package.json  popup.html  tsconfig.json
extension/src/: background.ts  content.ts  popup.ts  types.ts
server/: auth_gmail.py  main.py  pyproject.toml
server/agent/: graph.py  nodes.py  state.py
server/rails/api/: gmail.py
