[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.0",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.2",
    "openai>=2.46.0",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
]
